// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unitInput > renders click 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_medium__gwf0fl3 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_18_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_1c_"
            aria-describedby="_r_1c_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_1c_"
                aria-expanded="true"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_dropdownVisible_true__r8qe48 selectBar_size_medium__r8qe4b selectBar_state_neutral__r8qe4e selectBar_undefined_compound_0__r8qe4g"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__r8qe43 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="dropdown__igqisu1 styles__w40vpo4"
              id="_r_1c_"
              role="dialog"
              style="--ozfz3c0: -5px; --ozfz3c1: 0px; --ozfz3c2: rotate(180deg); --ozfz3c4: translate3d(0px, 4px, 0); --ozfz3c5: 0ms; --ozfz3c6: translate3d(0px, 4px, 0); --ozfz3c7: 100%; --igqisu0: 100%; opacity: 1;"
            >
              <div
                class="styles__w40vpo2"
              >
                <div
                  class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
                >
                  <div
                    class="dropdown__igqisu2 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
                    id="select-dropdown"
                    role="listbox"
                  >
                    <div
                      class="dropdown__igqisu8 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="kb"
                        aria-selected="false"
                        class="dropdown__igqisuc dropdown__igqisub dropdown__igqisua dropdown_size_medium__igqisuf"
                        data-testid="option-kb"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
                          data-testid="option-stack-kb"
                        >
                          <div
                            class="dropdown__igqisuq styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j styles_justifyContent_space-between_xxsmall__toi52u77"
                          >
                            <span
                              class="dropdown__igqisup style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
                              style="--textAlign__qabug40: left;"
                            >
                              KB
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="mb"
                        aria-selected="false"
                        class="dropdown__igqisuc dropdown__igqisub dropdown__igqisua dropdown_size_medium__igqisuf"
                        data-testid="option-mb"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
                          data-testid="option-stack-mb"
                        >
                          <div
                            class="dropdown__igqisuq styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j styles_justifyContent_space-between_xxsmall__toi52u77"
                          >
                            <span
                              class="dropdown__igqisup style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
                              style="--textAlign__qabug40: left;"
                            >
                              MB
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="gb"
                        aria-selected="false"
                        class="dropdown__igqisuc dropdown__igqisub dropdown__igqisua dropdown_size_medium__igqisuf"
                        data-testid="option-gb"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
                          data-testid="option-stack-gb"
                        >
                          <div
                            class="dropdown__igqisuq styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j styles_justifyContent_space-between_xxsmall__toi52u77"
                          >
                            <span
                              class="dropdown__igqisup style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
                              style="--textAlign__qabug40: left;"
                            >
                              GB
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_large__gwf0flc styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_0_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_4_"
            aria-describedby="_r_4_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_4_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with default value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_6e_"
        />
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_6e_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
            value="1"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_6m_"
            aria-describedby="_r_6m_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_6m_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe4m style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_28__m4c9ow22"
                >
                  KB
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with disabled and placeHolder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_28_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_2c_"
            aria-describedby="_r_2c_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_2c_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with dropdownAlign center 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_large__gwf0flc styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_2i_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_2m_"
            aria-describedby="_r_2m_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_2m_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with error  and success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_large__gwf0flc styles_error__gwf0fl8 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-describedby="_r_3l_"
            aria-invalid="true"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_3k_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_3o_"
            aria-describedby="_r_3o_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_3o_"
                aria-describedby="_r_3l_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_3l_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_large__gwf0flc styles_error__gwf0fl8 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-describedby="_r_39_"
            aria-invalid="true"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_38_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_3c_"
            aria-describedby="_r_3c_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_3c_"
                aria-describedby="_r_39_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_39_"
        role="status"
      >
        error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_5i_"
        >
          label
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_5i_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_5q_"
            aria-describedby="_r_5q_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_5q_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with label and no label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_56_"
      >
        label
      </label>
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_56_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_5c_"
            aria-describedby="_r_5c_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_5c_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with min max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_large__gwf0flc styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_a_"
            max="100"
            min="10"
            name="-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_e_"
            aria-describedby="_r_e_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_e_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input--unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with no label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_60_"
        />
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_60_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_68_"
            aria-describedby="_r_68_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_68_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_disabled_true__r8qe47 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_31__m4c9ow25"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_large__gwf0flc styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_1u_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_22_"
            aria-describedby="_r_22_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_22_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size medioum 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_medium__gwf0fl3 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_u_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_12_"
            aria-describedby="_r_12_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_12_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_medium__r8qe4b selectBar_state_neutral__r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__r8qe43 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_small__gwf0fle styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_small__gwf0fl4 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_k_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_o_"
            aria-describedby="_r_o_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_o_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_small__r8qe4c selectBar_state_neutral__r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__r8qe43 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles_large__gwf0flc styles_success__gwf0fla styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-describedby="_r_2t_"
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_2s_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14m3.844-8.791a.75.75 0 0 0-1.187-.918l-3.7 4.79-1.65-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_30_"
            aria-describedby="_r_30_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
            >
              <div
                aria-controls="_r_30_"
                aria-describedby="_r_2t_"
                aria-expanded="false"
                class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__r8qe44 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
                  style="--whiteSpace__qabug41: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_success__m4c9owe style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_56__m4c9ow2u"
        id="_r_2t_"
        role="status"
      >
        text
      </span>
    </div>
  </div>
</DocumentFragment>
`;
